dark mode additional fixes, logos and footer fixed

--- a/src/cis/NavbarCIS.css
+++ b/src/cis/NavbarCIS.css
@@ -9,9 +9,8 @@
 }
 
 .navbar-cis img {
-    margin-left: 15%;
-    width: 70%;
-    height: 55%;
+    width: 100%;
+    height: 100%;
     justify-self: start;
     align-self: center;
 }
